@@ -1,16 +1,40 @@
 
+##
+## Bootstrap and their Corresponding linker definitions were used from various sources like
+## IKnow YouTube channel (Very basic)
+## OSDev: http://wiki.osdev.org (Very Organized)
+##
+## So this DEFLINK is used as command line input
+## make DEFLINK={OSDEV|IKNOW}
+##
+DEFLINK = IKNOW
+
 ASSEMBLER = nasm
 ASFLAGS = -f elf32
 
 COMPILER = gcc
 INC = -I include/
 CFLAGS = -m32 -c -ffreestanding
+ifeq ($(DEFLINK), OSDEV)
+    LINKER_CFLAGS = -D__OS_DEV_LINKER__
+else
+    LINKER_CFLAGS = -D__IKNOW_LINKER__
+endif
 
 LINKER = ld
-LDFLAGS = -m elf_i386 -T src/link.ld
+LDFLAGS = -m elf_i386 -T
+ifeq ($(DEFLINK), OSDEV)
+    LDSRC = src/linker.ld
+else
+    LDSRC = src/link.ld
+endif
 
 
-OBJS = obj/kasm.o
+ifeq ($(DEFLINK), OSDEV)
+    OBJS = obj/boots.o
+else
+    OBJS = obj/kasm.o
+endif
 OBJS += obj/kc.o
 OBJS += obj/terminal.o
 OBJS += obj/vga.o
@@ -24,13 +48,16 @@ run:all
 all:$(OBJS)
 	mkdir okusha/ -p
 	mkdir okusha/boot/ -p
-	$(LINKER) $(LDFLAGS) -o $(OUTPUT) $(OBJS)
+	$(LINKER) $(LDFLAGS) $(LDSRC) -o $(OUTPUT) $(OBJS)
 
 obj/kasm.o:src/kernel.asm
 	$(ASSEMBLER) $(ASFLAGS) -o obj/kasm.o src/kernel.asm
 	
+obj/boots.o:src/bootstrap.asm
+	$(ASSEMBLER) $(ASFLAGS) -o obj/boots.o src/bootstrap.asm
+	
 obj/kc.o:src/kernel.c
-	$(COMPILER) $(CFLAGS) $(INC) src/kernel.c -o obj/kc.o 
+	$(COMPILER) $(CFLAGS) $(LINKER_CFLAGS) $(INC) src/kernel.c -o obj/kc.o 
 	
 obj/terminal.o:src/terminal.c
 	$(COMPILER) $(CFLAGS) $(INC) src/terminal.c -o obj/terminal.o 
@@ -57,3 +84,4 @@ build:all
 clean:
 	rm -f obj/*.o
 	rm -r -f okusha/
+	if [ -e okusha.iso ]; then rm okusha.iso; fi;
