@@ -1,7 +1,11 @@
 
 #include <terminal.h>
 
+#ifdef __OS_DEV_LINKER__
+kernel_main()
+#else /* __IKNOW_LINER__ */
 kmain()
+#endif /* __OS_DEV_LINKER__ */
 {
     /* Initialize terminal interface */
     terminal_initialize();
